0.0.5 / 2014-10-17

* Enhancements

  * Don't go to PostGIS database to convert WKB->GeoJSON, use rubyland RGeo instead.

0.0.4 / 2014-10-09

* Enhancements

  *  Define example polygons in a clockwise direction to ensure compatibility with D3 3.0

0.0.3 / 2014-10-08

* Enhancements

  * Simplify geojson examples - thanks @ihough https://github.com/seamusabshere/the_geom_geojson/pull/1 !

0.0.2 / 2014-07-22

* Enhancements

  * Support alternate primary keys set on ActiveRecord with `self.primary_key = X`

0.0.1 / 2014-07-17

initial release!