@@ -1,3 +1,7 @@
+* Enhancements
+
+  * Provide TheGeomGeoJSON.ewkb_to_geojson(ewkb)
+
 0.0.5 / 2014-10-17
 
 * Enhancements
